--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="appStyles.css">
 
-    <title>React App</title>
+    <title>eMember Admin Portal</title>
   </head>
   <body>
     <noscript>
